[gd_scene load_steps=77 format=2]

[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0005.png" type="Texture" id=1]
[ext_resource path="res://actors/hero/Hero.gd" type="Script" id=2]
[ext_resource path="res://assets/anim/walk/Player_RUN_0001.png" type="Texture" id=3]
[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0002.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/footsteps/Footstep_07.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/anim/walk/Player_RUN_0004.png" type="Texture" id=6]
[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0007.png" type="Texture" id=7]
[ext_resource path="res://assets/anim/walk/Player_RUN_0002.png" type="Texture" id=8]
[ext_resource path="res://assets/sfx/footsteps/Footstep_10.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/footsteps/Footstep_06.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0008.png" type="Texture" id=11]
[ext_resource path="res://assets/anim/walk_back/Player_RUN_back_0005.png" type="Texture" id=12]
[ext_resource path="res://assets/anim/idle/Timeline 1_0005.png" type="Texture" id=13]
[ext_resource path="res://assets/anim/walk/Player_RUN_0005.png" type="Texture" id=14]
[ext_resource path="res://assets/anim/idle/Timeline 1_0002.png" type="Texture" id=15]
[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0003.png" type="Texture" id=16]
[ext_resource path="res://assets/anim/idle/Timeline 1_0006.png" type="Texture" id=17]
[ext_resource path="res://assets/anim/idle/Timeline 1_0007.png" type="Texture" id=18]
[ext_resource path="res://assets/anim/walk_back/Player_RUN_back_0003.png" type="Texture" id=19]
[ext_resource path="res://utils/SoundCycle.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/sfx/footsteps/Footstep_11.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/sfx/Idle_Snoring.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/anim/walk/Player_RUN_0003.png" type="Texture" id=23]
[ext_resource path="res://assets/anim/walk_back/Player_RUN_back_0002.png" type="Texture" id=24]
[ext_resource path="res://assets/anim/walk_back/Player_RUN_back_0001.png" type="Texture" id=25]
[ext_resource path="res://assets/anim/walk_back/Player_RUN_back_0000.png" type="Texture" id=26]
[ext_resource path="res://assets/sfx/footsteps/Footstep_02.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/anim/walk/Player_RUN_0000.png" type="Texture" id=28]
[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0004.png" type="Texture" id=29]
[ext_resource path="res://assets/anim/idle/Timeline 1_0004.png" type="Texture" id=30]
[ext_resource path="res://assets/anim/idle/Timeline 1_0000.png" type="Texture" id=31]
[ext_resource path="res://assets/sfx/footsteps/Footstep_08.wav" type="AudioStream" id=32]
[ext_resource path="res://utils/StateMachine.gd" type="Script" id=33]
[ext_resource path="res://assets/anim/idle/Timeline 1_0001.png" type="Texture" id=34]
[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0000.png" type="Texture" id=35]
[ext_resource path="res://assets/anim/idle/Timeline 1_0008.png" type="Texture" id=36]
[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0006.png" type="Texture" id=37]
[ext_resource path="res://assets/anim/idle/Timeline 1_0003.png" type="Texture" id=38]
[ext_resource path="res://assets/anim/idle_back/Player_IDLE_back_0001.png" type="Texture" id=39]
[ext_resource path="res://assets/anim/walk_back/Player_RUN_back_0004.png" type="Texture" id=40]
[ext_resource path="res://assets/sfx/footsteps/Footstep_09.wav" type="AudioStream" id=41]
[ext_resource path="res://assets/sfx/footsteps/Footstep_01.wav" type="AudioStream" id=42]
[ext_resource path="res://assets/sfx/footsteps/Footstep_03.wav" type="AudioStream" id=43]
[ext_resource path="res://assets/sfx/footsteps/Footstep_05.wav" type="AudioStream" id=44]
[ext_resource path="res://assets/sfx/footsteps/Footstep_04.wav" type="AudioStream" id=45]
[ext_resource path="res://actors/hero/states/Idle.gd" type="Script" id=46]
[ext_resource path="res://actors/hero/states/Walk.gd" type="Script" id=47]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0004.png" type="Texture" id=48]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0005.png" type="Texture" id=49]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0003.png" type="Texture" id=50]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0002.png" type="Texture" id=51]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0007.png" type="Texture" id=52]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0008.png" type="Texture" id=53]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0001.png" type="Texture" id=54]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0006.png" type="Texture" id=55]
[ext_resource path="res://assets/anim/idle_white/Player_IDLE_WHITE_0009.png" type="Texture" id=56]
[ext_resource path="res://assets/anim/walk_white/Player_RUN_WHITE_0005.png" type="Texture" id=57]
[ext_resource path="res://assets/anim/walk_white/Player_RUN_WHITE_0000.png" type="Texture" id=58]
[ext_resource path="res://assets/anim/walk_white/Player_RUN_WHITE_0002.png" type="Texture" id=59]
[ext_resource path="res://assets/anim/walk_white/Player_RUN_WHITE_0003.png" type="Texture" id=60]
[ext_resource path="res://assets/anim/walk_white/Player_RUN_WHITE_0001.png" type="Texture" id=61]
[ext_resource path="res://assets/anim/walk_white/Player_RUN_WHITE_0004.png" type="Texture" id=62]
[ext_resource path="res://assets/shadow.png" type="Texture" id=63]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 54 ), ExtResource( 51 ), ExtResource( 50 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 55 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 56 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 39 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 29 ), ExtResource( 1 ), ExtResource( 37 ), ExtResource( 7 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "walk_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 61 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 62 ), ExtResource( 57 ) ],
"loop": true,
"name": "walk_horiz",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 40 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_up_45",
"speed": 10.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 61 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 62 ), ExtResource( 57 ) ],
"loop": true,
"name": "walk_down_45",
"speed": 10.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 61 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 62 ), ExtResource( 57 ) ],
"loop": true,
"name": "walk_down",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 34 ), ExtResource( 15 ), ExtResource( 38 ), ExtResource( 30 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 36 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 39 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 29 ), ExtResource( 1 ), ExtResource( 37 ), ExtResource( 7 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 40 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 23 ), ExtResource( 6 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk_horiz",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 40 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_up_45",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 23 ), ExtResource( 6 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk_down_45",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 23 ), ExtResource( 6 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk_down",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 35.0

[sub_resource type="Animation" id=4]
length = 12.0
loop = true
tracks/0/type = "audio"
tracks/0/path = NodePath("SFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 22 )
} ],
"times": PoolRealArray( 2.6 )
}

[sub_resource type="Animation" id=5]
tracks/0/type = "audio"
tracks/0/path = NodePath("SFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("FootstepsCycle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "None"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Idle/node = SubResource( 7 )
states/Idle/position = Vector2( 369, 49 )
states/None/node = SubResource( 8 )
states/None/position = Vector2( 108, 49 )
states/Walk/node = SubResource( 9 )
states/Walk/position = Vector2( 544, 49 )
transitions = [ "Idle", "Walk", SubResource( 10 ), "Walk", "Idle", SubResource( 11 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[node name="Hero" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 63 )

[node name="AnimatedSpriteWhite" type="AnimatedSprite" parent="."]
position = Vector2( -7.15256e-07, -74 )
scale = Vector2( 0.22902, 0.22902 )
frames = SubResource( 1 )
animation = "idle_down"
frame = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.15256e-07, -74 )
scale = Vector2( 0.22902, 0.22902 )
frames = SubResource( 2 )
animation = "idle_down"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 3 )

[node name="Debug" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -50.0
margin_right = 20.0
margin_bottom = -36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FootstepsCycle" parent="." instance=ExtResource( 20 )]
streams = [ ExtResource( 42 ), ExtResource( 27 ), ExtResource( 43 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 32 ), ExtResource( 41 ), ExtResource( 9 ), ExtResource( 21 ) ]
bus = "SFX"

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 4 )
anims/None = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="StateMachine" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )
script = ExtResource( 33 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 46 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 47 )
[connection signal="transition" from="StateMachine" to="." method="_on_StateMachine_transition"]
